--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="bootstrap-5.2.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="all.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>BETTER TO GETHER</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -70,7 +71,7 @@
           <p>Increased job readiness for students who develop<br>and offer valuable skills and services.</p>
       </div>
   </div>
-  <script src="bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
-  <script src="bootstrap-5.2.3-dist/js/all.min.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="all.min.js"></script>
 </body>
 </html>
