--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="all.min.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+
     <title>BETTER TO GETHER</title>
 </head>
 <body>
@@ -25,17 +27,17 @@
         <form class="d-flex" role="search">
           <ul class="nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#"><i class="fa-solid fa-house"></i> Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sign in</a>
+              <a class="nav-link" href="login.html"><i class="fa-solid fa-right-to-bracket"></i> Log in</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Create account
+              <a class="nav-link" href="#"><i class="fa-solid fa-user-plus"></i> Create account
               </a>
             </li>
             <li class="nav-item">
-              <a href="index.html" class="nav-link ">About us</a>
+              <a href="index.html" class="nav-link "><i class="fa-solid fa-circle-info"></i> About us</a>
             </li>
           </ul>
         </form>
