--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="index.html" class="nav-link "><i class="fa-solid fa-circle-info"></i> About us</a>
+              <a href="about.html" class="nav-link "><i class="fa-solid fa-circle-info"></i> About us</a>
             </li>
           </ul>
         </form>
