--- a/home.html
+++ b/home.html
@@ -28,13 +28,13 @@
                 <a   class="nav-link  " aria-current="page" href="myaccount.html"><i class="fa-solid fa-user ps-3 pe-3"></i>account</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="notification.html"><i class="fa-regular fa-bell ps-3 pe-3"></i>notification</a>
+                <a class="nav-link " aria-current="page" href="notification2.html"><i class="fa-regular fa-bell ps-3 pe-3"></i>notification</a>
               </li>
               <li class="nav-item">
                 <a  class="nav-link " aria-current="page" href="#"><i class="fa-regular fa-envelope ps-3 pe-3"></i>message</a>
               </li>
               <li class="nav-item">
-                <a  class="nav-link" aria-current="page" href="#"><i class="fa-solid fa-briefcase ps-3 pe-3"></i>work</a>
+                <a  class="nav-link" aria-current="page" href="gift.html"><i class="fa-solid fa-gift ps-3 pe-3"></i>gift</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -75,7 +75,6 @@
           </div>
       </div>
           
-     
     <script src="script.js"></script>
     <script src="all.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
