--- a/myaccount2.html
+++ b/myaccount2.html
@@ -28,13 +28,13 @@
                 <a   class="nav-link  " aria-current="page" href="myaccount.html"><i class="fa-solid fa-user ps-3 pe-3"></i>account</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="notification2.html"><i class="fa-regular fa-bell ps-3 pe-3"></i>notification</a>
+                <a class="nav-link " aria-current="page" href="notification.html"><i class="fa-regular fa-bell ps-3 pe-3"></i>notification</a>
               </li>
               <li class="nav-item">
                 <a  class="nav-link " aria-current="page" href="#"><i class="fa-regular fa-envelope ps-3 pe-3"></i>message</a>
               </li>
               <li class="nav-item">
-                <a  class="nav-link" aria-current="page" href="#"><i class="fa-solid fa-gift ps-3 pe-3"></i>gift</a>
+                <a  class="nav-link" aria-current="page" href="gift2.html"><i class="fa-solid fa-gift ps-3 pe-3"></i>gift</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -55,7 +55,7 @@
             <div class="row d-flex justify-content-between">
               <div class="col-lg-1">
                 <nav class="xs d-sm-flex d-md-flex justify-content-around d-lg-block">
-                    <div><a href="home.html"><i  class="fa-solid fa-code "></i></a></div>
+                    <div><a href="home2.html"><i  class="fa-solid fa-code "></i></a></div>
                     <div><i class="fa-solid fa-pager"></i></div>
                     <div><i class="fa-regular fa-note-sticky"></i></div>
                     <div><i class="fa-solid fa-bookmark"></i></div>
