--- a/notification.html
+++ b/notification.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="all.min.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="myaccount.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a   class="nav-link  " aria-current="page" href="myaccount.html"><i class="fa-solid fa-user ps-3 pe-3"></i>account</a>
+                <a   class="nav-link  " aria-current="page" href="myaccount2.html"><i class="fa-solid fa-user ps-3 pe-3"></i>account</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link " aria-current="page" href="#"><i class="fa-regular fa-bell ps-3 pe-3"></i>notification</a>
@@ -29,7 +30,7 @@
                 <a  class="nav-link " aria-current="page" href="#"><i class="fa-regular fa-envelope ps-3 pe-3"></i>message</a>
               </li>
               <li class="nav-item">
-                <a  class="nav-link" aria-current="page" href="#"><i class="fa-solid fa-briefcase ps-3 pe-3"></i>work</a>
+                <a  class="nav-link" aria-current="page" href="gift2.html"><i class="fa-solid fa-gift ps-3 pe-3"></i>gift</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -50,7 +51,7 @@
             <div class="row d-flex justify-content-between">
               <div class="col-lg-1">
                 <nav class="xs d-sm-flex d-md-flex justify-content-around d-lg-block">
-                    <div><a href="home.html"><i  class="fa-solid fa-code "></i></a></div>
+                    <div><a href="home2.html"><i  class="fa-solid fa-code "></i></a></div>
                     <div><i class="fa-solid fa-pager"></i></div>
                     <div><i class="fa-regular fa-note-sticky"></i></div>
                     <div><i class="fa-solid fa-bookmark"></i></div>
@@ -58,8 +59,14 @@
                     <div><i class="fa-solid fa-trash-can"></i></div>
                 </nav>
               </div>
-              <div class="first col-sm-12 col-lg-10">
+              <div class="theall col-sm-12 col-lg-10">
+                <div id="saved-posts">
+                  <div class="notification">
+
+                  </div>
+                </div>
             </div>
+    <script src="script3.js"></script>
     <script src="all.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
 </body>
